[package]
name = "ray"
version = "0.1.0"
authors = ["Florian Kaiser <mail@floriankaiser.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel-canvas = "0.2.1"
cgmath = "0.17.0"
num_cpus = "1.13.0"
rand = "0.7.3"
multiqueue = "0.3.2"